feat: QueryService'i HTTP yüzüne bağla
